Restructure the README around comparable tables
The benchmark numbers had accumulated into ten tables across four sections,
one scale per table, so answering "what should I use at five million rows"
meant reading the whole document and holding three tables in your head. This
reorganises around that question without dropping any finding.

**Scales are now columns.** Each of the three measurement sets is one table
with 10k / 1M / 10M (or 20M) side by side and `time · peak RSS` in the cell.
Nineteen engines, thirteen toolchain builds and twelve external tools each
become one readable grid instead of three tables to cross-reference.

**The sets are named and their hosts stated once.** A is the GitHub runners,
B is the byte-level design across toolchains, C is the external field. The
rule that mattered and was previously repeated in four places -- compare rows
within a table, never across tables -- is now stated once, up front, with the
method for each set beside it.

**A recommendation section comes before the evidence.** "Which engine at
which size" answers the question the benchmarks exist to answer, in six rows,
and the tables below it are the working.

**The technique notes move into their own section** rather than trailing the
tables they came from: the byte-level design, SWAR against the Vector API
(including the 2x2 design matrix the five Java engines actually form, which
was never spelled out), the out-of-core engine, which of the three "memory"
numbers to trust, and duplicate keys. Every note survives; they are grouped by
subject now instead of by which run produced them.

To make the side-by-side tables complete rather than sparse, the full
toolchain matrix was measured at 10k and 1M -- previously only clang 18 and
gcc 13 had numbers below 20M. That also sharpens two findings: the
clang-versus-gcc gap at 1M is 1.8x between the fastest and slowest C++ build,
and Zig 0.17-dev is 17% faster than 0.16 at 1M against 11% at 20M.

Also adds an "Open questions" sectio